# python-projects

./: main.py  pyproject.toml  replit.nix
projects/: Image Filter Application.py  QR Code Generator.py  Simple Chatbot.py  Weather Data Visualizer.py  text_to_speech.py
